# mecanum-car

./: .gitignore  Cargo.toml  README.md
app/: index.html
measurements/: analysis.ipynb
measurements/01/: analysis.ipynb  b_0.30_00.csv  b_0.30_01.csv  b_0.40_00.csv  b_0.40_01.csv  b_0.50_00.csv  b_0.50_01.csv  b_0.60_00.csv  b_0.60_01.csv  b_0.70_00.csv  b_0.70_01.csv  b_0.80_00.csv  b_0.80_01.csv  b_0.90_00.csv  b_0.90_01.csv  b_1.00_00.csv  b_1.00_01.csv  description.txt  f_0.30_00.csv  f_0.30_01.csv  f_0.40_00.csv  f_0.40_01.csv  f_0.50_00.csv  f_0.50_01.csv  f_0.60_00.csv  f_0.60_01.csv  f_0.70_00.csv  f_0.70_01.csv  f_0.80_00.csv  f_0.80_01.csv  f_0.90_00.csv  f_0.90_01.csv  f_1.00_00.csv  f_1.00_01.csv
measurements/02/: b_0.30_00.csv  b_0.30_01.csv  b_0.30_02.csv  b_0.35_00.csv  b_0.35_01.csv  b_0.35_02.csv  b_0.40_00.csv  b_0.40_01.csv  b_0.40_02.csv  b_0.45_00.csv  b_0.45_01.csv  b_0.45_02.csv  b_0.50_00.csv  b_0.50_01.csv  b_0.50_02.csv  b_0.55_00.csv  b_0.55_01.csv  b_0.55_02.csv  b_0.60_00.csv  b_0.60_01.csv  b_0.60_02.csv  b_0.65_00.csv  b_0.65_01.csv  b_0.65_02.csv  b_0.70_00.csv  b_0.70_01.csv  b_0.70_02.csv  b_0.75_00.csv  b_0.75_01.csv  b_0.75_02.csv  b_0.80_00.csv  b_0.80_01.csv  b_0.80_02.csv  b_0.85_00.csv  b_0.85_01.csv  b_0.85_02.csv  b_0.90_00.csv  b_0.90_01.csv  b_0.90_02.csv  b_0.95_00.csv  (+51 more)
src/: distance_scan.rs  drive.rs  error.rs  hc_sr04.rs  main.rs  movement_calibration.rs  server.rs
src/api/: mod.rs  models.rs  routes.rs
src/drive/: mod.rs  motor.rs
static/: index.html  script.js  style.css
templates/: index.html
