[package]
name = "mecanum-car"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.14.1"
actix = "0.13.0"
actix-web = "4"
actix-web-actors = "4"
actix-files = "0.6"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0"
log = "0.4.20"
env_logger = "0.10.0"
log-panics = "2.1.0"
